--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -33,6 +33,11 @@
         <i class="fa fa-briefcase"></i> Ocupações
       </a>
     </li>
+    <li class="bold">
+      <a href="/medicamentos" class="waves-effect waves-cyan">
+        <i class="fa fa-medkit"></i> Medicamentos
+      </a>
+    </li>
 
     <li class="bold">
       <a href="/users" class="waves-effect waves-cyan">
