--- a/app/views/notificacaos/show.html.erb
+++ b/app/views/notificacaos/show.html.erb
@@ -12,17 +12,17 @@
 
 <p>
   <strong>Grau incapacidade:</strong>
-  <%= @notificacao.grau_incapacidade %>
+  <%= @notificacao.grau_incapacidade_text %>
 </p>
 
 <p>
   <strong>Modo entrada:</strong>
-  <%= @notificacao.modo_entrada %>
+  <%= @notificacao.modo_entrada_text %>
 </p>
 
 <p>
   <strong>Modo deteccao:</strong>
-  <%= @notificacao.modo_deteccao %>
+  <%= @notificacao.modo_deteccao_text %>
 </p>
 
 <p>
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Baciloscopia:</strong>
-  <%= @notificacao.baciloscopia %>
+  <%= @notificacao.baciloscopia_text %>
 </p>
 
 <p>
@@ -42,7 +42,7 @@
 
 <p>
   <strong>Esquema terapeutico:</strong>
-  <%= @notificacao.esquema_terapeutico %>
+  <%= @notificacao.esquema_terapeutico_text %>
 </p>
 
 </div>
