--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -38,6 +38,11 @@
         <i class="fa fa-medkit"></i> Medicamentos
       </a>
     </li>
+    <li class="bold">
+      <a href="/queixas" class="waves-effect waves-cyan">
+        <i class="fa fa-stethoscope"></i> Queixas
+      </a>
+    </li>
 
     <li class="bold">
       <a href="/users" class="waves-effect waves-cyan">
