--- a/app/views/pacientes/_notificacoes.html.erb
+++ b/app/views/pacientes/_notificacoes.html.erb
@@ -15,8 +15,8 @@
 
         <td><%= link_to notificacao.numero,notificacao %></td>
         <td><%= notificacao.data %></td>
-        <td><%= notificacao.modo_entrada %></td>
-        <td><%= notificacao.modo_deteccao %></td>
+        <td><%= notificacao.modo_entrada_text %></td>
+        <td><%= notificacao.modo_deteccao_text %></td>
 
 
       </tr>
