--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -43,6 +43,11 @@
         <i class="fa fa-stethoscope"></i> Queixas
       </a>
     </li>
+    <li class="bold">
+      <a href="/monofilamentos" class="waves-effect waves-cyan">
+        <i class="fa fa-list"></i> Monofilamentos
+      </a>
+    </li>
 
     <li class="bold">
       <a href="/users" class="waves-effect waves-cyan">
