--- a/app/views/avaliacao_notificacaos/show.html.erb
+++ b/app/views/avaliacao_notificacaos/show.html.erb
@@ -92,6 +92,16 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Avaliações Sensitivas</span>
+        <%= render partial: "avaliacao_sensitiva", locals:{avaliacao_sensitivas: @avaliacao_notificacao.avaliacao_sensitivas} %>
+      </div>
+
+    </div>
+  </div>
+
 </div>
 <%= link_to 'Nova Avaliação Sensitiva', new_avaliacao_sensitiva_path(avaliacao: @avaliacao_notificacao.id), class:"btn" %>
 <%= link_to 'Voltar', avaliacao_notificacaos_path, class:"btn" %>
