mapa de pacientes

--- a/app/views/avaliacao_notificacaos/show.html.erb
+++ b/app/views/avaliacao_notificacaos/show.html.erb
@@ -104,6 +104,6 @@
 
 </div>
 <%= link_to 'Nova Avaliação Sensitiva', new_avaliacao_sensitiva_path(avaliacao: @avaliacao_notificacao.id), class:"btn" %>
-<%= link_to 'Voltar', avaliacao_notificacaos_path, class:"btn" %>
+<%= link_to 'Voltar', notificacao_path(@avaliacao_notificacao.notificacao), class:"btn" %>
 
 
