--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -29,6 +29,16 @@
       </a>
     </li>
     <li class="bold">
+      <a href="/notificacaos" class="waves-effect waves-cyan">
+        <i class="fa fa-bell"></i> Notificações
+      </a>
+    </li>
+    <li class="bold">
+      <a href="/pacientes/mapa" class="waves-effect waves-cyan">
+        <i class="fa fa-map"></i> Mapa dos Pacientes
+      </a>
+    </li>
+    <li class="bold">
       <a href="/ocupacaos" class="waves-effect waves-cyan">
         <i class="fa fa-briefcase"></i> Ocupações
       </a>
