--- a/app/views/notificacaos/_contatos.html.erb
+++ b/app/views/notificacaos/_contatos.html.erb
@@ -12,7 +12,7 @@
   <% notificacao_contatos.each do |notificacao_contato| %>
       <tr>
 
-        <td><%= notificacao_contato.nome %></td>
+        <td><%= link_to notificacao_contato.nome, notificacao_contato %></td>
 
 
 
