--- a/app/views/pacientes/index.html.erb
+++ b/app/views/pacientes/index.html.erb
@@ -39,7 +39,7 @@
 
           <td><%= paciente.peso %></td>
 
-          <td><%= paciente.longitude %></td>
+          <td><%= paciente.endereco %></td>
 
           <td><%= paciente.sexo %></td>
 
