--- a/app/views/notificacao_contatos/show.html.erb
+++ b/app/views/notificacao_contatos/show.html.erb
@@ -12,18 +12,62 @@
 
 <p>
   <strong>Suspeito:</strong>
-  <%= @notificacao_contato.suspeito %>
+  <%= @notificacao_contato.suspeito == true ? "SIM" : "NÃO" %>
 </p>
 
 <p>
   <strong>Confirmado:</strong>
-  <%= @notificacao_contato.confirmado %>
+  <%= @notificacao_contato.confirmado == true ? "SIM" : "NÃO" %>
 </p>
 
 <p>
-  <strong>Notificacao:</strong>
+  <strong>Notificação:</strong>
   <%= @notificacao_contato.notificacao %>
 </p>
 
+  <div class="row">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Avaliações</span>
+        <%= render partial: "avaliacoes", locals:{contato_avaliacaos:@notificacao_contato.contato_avaliacaos} %>
+      </div>
+      <!-- Modal Trigger -->
+      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Nova Avaliação</a>
+    </div>
+  </div>
+
+
+
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal bottom-sheet">
+    <%= form_tag(contato_avaliacaos_path, method: :post) do  %>
+      <div class="modal-content">
+        <%= fields_for :contato_avaliacao do |f| %>
+          <h4>Avaliação do Contato</h4>
+          <div class="row">
+            <div class="col s12 l4 input-field">
+              <label>Data</label>
+              <%= f.text_field :data, {class:"datepicker"} %>
+            </div>
+            <div class="col s12 l2 input-field">
+
+              <%= f.check_box :suspeito %>
+              <%= f.label :suspeito %>
+            </div>
+            <div class="col s12 l2 input-field">
+              <%= f.check_box :confirmado %>
+              <%= f.label :confirmado %>
+            </div>
+
+          </div>
+          <%= f.hidden_field :notificacao_contato_id, value: @notificacao_contato.id %>
+        <% end %>
+        <%= submit_tag "Salvar", class:"modal-close btn"  %>
+      </div>
+
+
+    <% end %>
+  </div>
 </div>
-<%= link_to 'Voltar', notificacao_contatos_path, class:"btn" %>
+<%= link_to 'Voltar', notificacao_path(@notificacao_contato.notificacao), class:"btn" %>
