--- a/app/views/pacientes/mapa.html.erb
+++ b/app/views/pacientes/mapa.html.erb
@@ -43,7 +43,7 @@
         var contentString = '<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">'+paciente.nome+'</h1>'+
+            '<h1 id="firstHeading" class="firstHeading"><a href="/pacientes/'+paciente.id+'">'+paciente.nome+'</a></h1>'+
             '<div id="bodyContent">'+
             '<p></p>'+
             '</div>'+
